@@ -99,3 +99,10 @@ class SequenceNode(CollectionNode):
 class MappingNode(CollectionNode):
     __slots__ = ('merge', )
     id = 'mapping'
+
+    def __init__(self, tag, value, start_mark=None, end_mark=None,
+                 flow_style=None, comment=None, anchor=None):
+        # type: (Any, Any, Any, Any, Any, Any, Any) -> None
+        CollectionNode.__init__(self, tag, value, start_mark, end_mark,
+                                flow_style, comment, anchor)
+        self.merge = None
