@@ -57,15 +57,15 @@ class Serializer(object):
     def emitter(self):
         # type: () -> Any
         if hasattr(self.dumper, 'typ'):
-            return self.dumper.emitter
-        return self.dumper._emitter
+            return self.dumper.emitter  # type: ignore
+        return self.dumper._emitter  # type: ignore
 
     @property
     def resolver(self):
         # type: () -> Any
         if hasattr(self.dumper, 'typ'):
-            self.dumper.resolver
-        return self.dumper._resolver
+            self.dumper.resolver  # type: ignore
+        return self.dumper._resolver  # type: ignore
 
     def open(self):
         # type: () -> None
